--- a/WalletApp.Api/appsettings.json
+++ b/WalletApp.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=WalletDb;User Id=sa;Password=TuPasswordSeguro123!;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
