--- a/WalletApp.Application/WalletApp.Application.csproj
+++ b/WalletApp.Application/WalletApp.Application.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="16.0.0" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
@@ -10,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Funcionalidades\Command\" />
+    <Folder Include="Funcionalidades\Command\Usuarios\" />
     <Folder Include="Funcionalidades\Query\" />
   </ItemGroup>
 
